[package]
name = "advent-of-rust-2018"
version = "0.1.0"
authors = ["Duncan Finney <duncan.finney@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1.1.0"
lazy_static = "1.2.0"
chrono = { version = "0.4", features = ["serde"] }
cached = "0.8.0"
itertools = "0.7.11"
petgraph="*"
id_tree="1.3.0"
bytes = { version = "0.4", features = ["serde"] }
rayon="1.0.3"
uuid = { version = "0.7", features = ["v4"] }

